Reorganize shelf and hint elements in index.html

--- a/index.html
+++ b/index.html
@@ -33,9 +33,11 @@
     </header>
 
     <section id="shelfWrap">
-      <div id="shelf" aria-live="polite"></div>
-      <div id="emptyHint" class="hint">Tap “Add Note” to add your first book</div>
-    </section>
+  <div id="shelfTop" class="shelf"></div>
+  <div id="shelfBottom" class="shelf"></div>
+  
+  <div id="emptyHint" class="hint">Tap “Add Note” to add your first book</div>
+</section>
 
     <!-- Hidden file input triggers camera on mobile -->
     <input id="fileInput" type="file" accept="image/*" capture="environment" style="display:none">
